Add basic HTML structure

--- a/index.html
+++ b/index.html
@@ -1,13 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Document</title>
 </head>
+
 <body>
+    <h1 class="heading">Higher or Lower</h1>
+
+    <div class="game-area">
+        <div class="rules-box">
+            <p>The rules are simple. Higher, or lower</p>
+            <p>Do you dare test your luck?</p>
+        </div>
+        <div class="dice-area"></div>
+        <div class="choice-area"></div>
+        <div class="result-area"></div>
+        <div class="score-area">
+            <p class="score">Correct Guesses: <span id="correct">0</span></p>
+            <p class="score">Incorrect Guesses: <span id="incorrect">0</span></p>
+        </div>
+    </div>
 
     <script src="assets/js/script.js"></script>
 </body>
+
 </html>
