--- a/index.html
+++ b/index.html
@@ -16,12 +16,23 @@
     <h1 class="heading">Higher or Lower</h1>
 
     <div class="game-area">
+
         <div class="rules-box">
             <p>The rules are simple. Higher, or lower</p>
             <p>Do you dare test your luck?</p>
         </div>
+
         <div class="dice-area"></div>
-        <div class="choice-area"></div>
+
+        <div class="choice-area">
+            <button class="btn btn--choice">Higher</button>
+            <button class="btn btn--choice">Lower</button>
+        </div>
+
+        <div class="roll-dice">
+            <button class="btn btn--roll">Roll Dice!</button>
+        </div>
+
         <div class="result-area"></div>
         <div class="score-area">
             <p class="score">Correct Guesses: <span id="correct">0</span></p>
@@ -29,6 +40,7 @@
         </div>
     </div>
 
+    <!-- Link JavaScript -->
     <script src="assets/js/script.js"></script>
 </body>
 
