--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/x-icon" href="assets/favicon/d20.png">
 
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Document</title>
+    <title>Higher or Lower</title>
 </head>
 
 <body>
@@ -34,10 +34,12 @@
         </div>
 
         <div class="result-area"></div>
+
         <div class="score-area">
             <p class="score">Correct Guesses: <span id="correct">0</span></p>
             <p class="score">Incorrect Guesses: <span id="incorrect">0</span></p>
         </div>
+
     </div>
 
     <!-- Link JavaScript -->
