Add dice image in game area

--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
     <div class="game-area">
 
         <div class="rules-box">
-            <p>The rules are simple. Higher, or lower</p>
-            <p>Do you dare test your luck?</p>
+            <p>The rules are simple. Roll the 10 sided die, then pick Higher, or lower.</p>
+            <p>Dare you test your luck?</p>
         </div>
 
-        <div class="dice-area"></div>
+        <div class="dice-area">
+            <img src="assets/images/d10.png" alt="d10 dice face">
+        </div>
 
         <div class="roll-dice">
             <button class="btn btn--roll">Roll Dice!</button>
@@ -33,7 +35,7 @@
             <button class="btn btn--choice">Lower</button>
         </div>
 
-        <div class="result-area"></div>
+        <div id="result"></div>
 
         <div class="score-area">
             <p class="score">Correct Guesses: <span id="correct">0</span></p>
