--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="assets/favicon/d20.png">
 
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&family=Oxygen:wght@300;400;700&display=swap"
+        rel="stylesheet">
+
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Higher or Lower</title>
 </head>
