Add style for dice and added section colours

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-    <h1 class="heading">Higher or Lower</h1>
+    <h1 class="heading red">Higher or Lower</h1>
 
     <!-- Main Content -->
     <main>
@@ -31,13 +31,13 @@
 
             <!-- Rules -->
             <div class="rules-box">
-                <p>The rules are simple. Roll the 10 sided die, then pick Higher, or lower.</p>
-                <p>Dare you test your luck?</p>
+                <p class="red">The rules are simple. Roll the 10 sided die, then pick Higher, or lower.</p>
+                <p class="red">Dare you test your luck?</p>
             </div>
 
             <!-- Dice area -->
             <div class="dice-area">
-                <img src="assets/images/d6 face.png" alt="d6 dice face">
+                <img id="dice" src="assets/images/d6 face.png" alt="d6 dice face">
             </div>
 
             <!-- Button that begins the game -->
@@ -56,8 +56,8 @@
 
             <!-- Score section -->
             <div class="score-area">
-                <p class="score">Correct Guesses: <span id="correct">0</span></p>
-                <p class="score">Incorrect Guesses: <span id="incorrect">0</span></p>
+                <p class="score red">Correct Guesses: <span id="correct">0</span></p>
+                <p class="score red">Incorrect Guesses: <span id="incorrect">0</span></p>
             </div>
 
         </div>
