Add flexbox to heading and main content area

--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
 </head>
 
 <body>
-    <h1 class="heading red">Higher or Lower</h1>
+
+    <div class="title">
+        <h1 class="heading red">Higher or Lower</h1>
+    </div>
+    
 
     <!-- Main Content -->
     <main>
