Add styles to rules

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 
             <!-- Rules -->
             <div class="rules-box">
-                <p class="red">The rules are simple. Roll the 10 sided die, then pick Higher, or lower.</p>
-                <p class="red">Dare you test your luck?</p>
+                <p class="red">The rules are simple. Roll the 10 sided die, then pick Higher, or lower.<br>
+                    Dare you test your luck?</p>
             </div>
 
             <!-- Dice area -->
