Add skeleton script for dice roll function

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 
             <!-- Div which contains main gameplay function -->
             <div class="choice-area">
-                <button class="btn btn--choice">Higher</button>
-                <button class="btn btn--choice">Lower</button>
+                <button class="btn btn--choice higher">Higher</button>
+                <button class="btn btn--choice lower">Lower</button>
             </div>
 
             <!-- Score section -->
