Add number randomness to rollDice function, create width for result box add img element for game

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
 
              <!-- Results section -->
-             <div id="result"></div>
+             <div id="result"><img class="img1" src="" alt=""></div>
 
             <!-- Div which contains main gameplay function -->
             <div class="choice-area">
