Add script to display dice image that matches random number generated on dice roll

--- a/index.html
+++ b/index.html
@@ -41,16 +41,13 @@
 
             <!-- Dice area -->
             <div class="dice-area">
-                <img id="dice" src="assets/images/d6 face.png" alt="d6 dice face">
+                <img id="dice" src="assets/images/d6-face.png" alt="d6 dice face">
             </div>
 
             <!-- Button that begins the game -->
             <div class="roll-dice">
                 <button class="btn btn--roll">Roll Dice!</button>
             </div>
-
-             <!-- Results section -->
-             <div id="result"><img class="img1" src="" alt=""></div>
 
             <!-- Div which contains main gameplay function -->
             <div class="choice-area">
