Added roll dice on DOM load function

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
             <!-- Dice area -->
             <div class="dice-area">
-                <img id="dice" src="assets/images/d6-face.png" alt="d6 dice face">
+                <img id="dice" src="" alt="">
             </div>
 
             <!-- Button that begins the game -->
