Updated rules box

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
             <!-- Rules -->
             <div class="rules-box">
-                <p class="red">The rules are simple. Roll the 10 sided die, then pick Higher, or lower.<br>
+                <p class="red">The rules are simple. Higher, or lower.<br>
                     Dare you test your luck?</p>
             </div>
 
