Removed roll dice button

--- a/index.html
+++ b/index.html
@@ -44,9 +44,8 @@
                 <img id="dice" src="" alt="">
             </div>
 
-            <!-- Button that begins the game -->
-            <div class="roll-dice">
-                <button class="btn btn--roll">Roll Dice!</button>
+            <!-- Div that contains script that begins the game -->
+            <div class="btn--roll">
             </div>
 
             <!-- Div which contains main gameplay function -->
