Added rollIn animation to dice img

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- Animate.css library -->
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+     />
+
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="assets/favicon/d20.png">
 
@@ -41,11 +47,11 @@
 
             <!-- Dice area -->
             <div class="dice-area">
-                <img id="dice" src="" alt="">
+                <img class="animate__animated animate__rollIn" id="dice" src="" alt="">
             </div>
 
             <!-- Div that contains script that begins the game -->
-            <div class="btn--roll">
+            <div>
             </div>
 
             <!-- Div which contains main gameplay function -->
