Added message functionalty and reduced higher and lower functions into single function

--- a/index.html
+++ b/index.html
@@ -45,9 +45,11 @@
                     Dare you test your luck?</p>
             </div>
 
+            <div id="message"></div>
+
             <!-- Dice area -->
             <div class="dice-area">
-                <img class="animate__animated animate__rollIn" id="dice" src="" alt="">
+                <img class="animate__animated animate__rollIn" id="dice" src="" alt="the face of the dice">
             </div>
 
             <!-- Div that contains script that begins the game -->
