Set setTimeout function to 1500

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                     Dare you test your luck?</p>
             </div>
 
+            <!-- Div that will contain message for user -->
             <div id="message"></div>
 
             <!-- Dice area -->
