Add font weight to p elements

--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Animate.css library -->
-    <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="assets/favicon/d20.png">
@@ -31,7 +28,7 @@
     <div class="title">
         <h1 class="heading red">Higher or Lower</h1>
     </div>
-    
+
 
     <!-- Main Content -->
     <main>
@@ -50,7 +47,7 @@
 
             <!-- Dice area -->
             <div class="dice-area">
-                <img class="animate__animated animate__rollIn" id="dice" src="" alt="the face of the dice">
+                <img class="animate__animated animate__rollIn" id="dice" src="." alt="the face of the dice">
             </div>
 
             <!-- Div that contains script that begins the game -->
