Background colours changed to improve accessibility

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
 
     <div class="title">
-        <h1 class="heading red">Higher or Lower</h1>
+        <h1 class="heading">Higher or Lower</h1>
     </div>
 
 
@@ -38,7 +38,7 @@
 
             <!-- Rules -->
             <div class="rules-box">
-                <p class="red">The rules are simple. Higher, or lower.<br>
+                <p class="blue">The rules are simple. Higher, or lower.<br>
                     Dare you test your luck?</p>
             </div>
 
@@ -62,8 +62,8 @@
 
             <!-- Score section -->
             <div class="score-area">
-                <p class="score red">Correct Guesses: <span id="correct">0</span></p>
-                <p class="score red">Incorrect Guesses: <span id="incorrect">0</span></p>
+                <p class="score blue">Correct Guesses: <span id="correct">0</span></p>
+                <p class="score blue">Incorrect Guesses: <span id="incorrect">0</span></p>
             </div>
 
         </div>
